.provarCaches/00D5f000005vwGkEAI/objects/rstk__confdgroup__c.object
<CustomObject>
    <description>confdgroup__c</description>
    <fields>
        <fullName>rstk__confdgroup_confgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Configuration Session Groups</relationshipLabel>
        <relationshipName>confdgroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdgroup_confsess__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session ID</label>
        <referenceTo>rstk__confsess__c</referenceTo>
        <relationshipLabel>Configuration Session Groups</relationshipLabel>
        <relationshipName>confdgroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdgroup_sumselqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sum of Group Selection Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__confdgroup_confsess__r.rstk__confsess_sessionid__c) + &apos;_&apos; + rstk__confdgroup_confgroup__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__confdgroup_confsess__r.rstk__confsess_sessionid__c) + &apos; &apos; + rstk__confdgroup_confgroup__r.rstk__confgroup_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configuration Session Groups</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Session Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>